objects/Rule__c.object
<CustomObject>
    <fields>
        <fullName>Advisory_Event__c</fullName>
        <label>Advisory Event</label>
        <referenceTo>Advisory_Event__c</referenceTo>
        <relationshipLabel>Rules</relationshipLabel>
        <relationshipName>Rules</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Event_Status_Category__c</fullName>
        <formula>Advisory_Event__r.Status_Category__c</formula>
        <label>Event Status Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Status__c</fullName>
        <formula>TEXT( Advisory_Event__r.Status__c )</formula>
        <label>Event Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Industry</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job_Function__c</fullName>
        <label>Job Function</label>
        <picklist>
            <picklistValues>
                <fullName>Primary Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Board Member</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CEO/President</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Department Chair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive Assistant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Owner/Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Provost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other - Admin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other - Clinical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other CXO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Membership_Status__c</fullName>
        <label>Membership Status</label>
        <picklist>
            <picklistValues>
                <fullName>Member</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Both</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Rules</relationshipLabel>
        <relationshipName>Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Record_Type_Name__c</fullName>
        <description>Created as part of Event Management.</description>
        <formula>RecordType.Name</formula>
        <label>Record Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Threshold_Number__c</fullName>
        <inlineHelpText>Pertains to Large Groups</inlineHelpText>
        <label>Threshold #</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Threshold_Percent__c</fullName>
        <inlineHelpText>Pertains to Industry Capacity</inlineHelpText>
        <label>Threshold %</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Threshold_Type__c</fullName>
        <label>Threshold Type</label>
        <picklist>
            <picklistValues>
                <fullName>Online</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Large Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industry</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Rule</label>
    <nameField>
        <label>Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rules</pluralLabel>
    <recordTypes>
        <fullName>Program</fullName>
        <active>true</active>
        <description>Program memberships and their associated status</description>
        <label>Program</label>
    </recordTypes>
    <recordTypes>
        <fullName>Threshold</fullName>
        <active>true</active>
        <description>Large Group, Online, and Industry thresholds</description>
        <label>Threshold</label>
    </recordTypes>
    <recordTypes>
        <fullName>Title</fullName>
        <active>true</active>
        <description>Job Functions, as defined for Contact Job Functions</description>
        <label>Title</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Job_function_is_required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
    ISBLANK( TEXT( Job_Function__c ) ),
     RecordType.Name == &quot;Title&quot;
)</errorConditionFormula>
        <errorDisplayField>Job_Function__c</errorDisplayField>
        <errorMessage>You must select a Job Function</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Program_is_required</fullName>
        <active>true</active>
        <description>Program is required when record type is Program and Program field is blank.</description>
        <errorConditionFormula>AND(
    RecordType.Name == &quot;Program&quot;,
    ISBLANK( Program__c )
)</errorConditionFormula>
        <errorDisplayField>Program__c</errorDisplayField>
        <errorMessage>You must select a Program</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Threshold_type_is_required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
    RecordType.Name == &quot;Threshold&quot;,
    ISBLANK( TEXT( Threshold_Type__c ) )
)</errorConditionFormula>
        <errorDisplayField>Threshold_Type__c</errorDisplayField>
        <errorMessage>You must declare a threshold type</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Threshold_value_is_required</fullName>
        <active>true</active>
        <description>You must define the threshold as either a number or percentage</description>
        <errorConditionFormula>AND(
    OR(
        AND(
            ISBLANK( Threshold_Number__c ),
            ISBLANK( Threshold_Percent__c )
        ),
        AND(
            NOT( ISBLANK( Threshold_Number__c ) ),
            NOT( ISBLANK( Threshold_Percent__c ) )
        )
    ),
     RecordType.Name == &quot;Threshold&quot;
)</errorConditionFormula>
        <errorMessage>You must define the threshold as either a number or percentage</errorMessage>
    </validationRules>
</CustomObject>